# psp

./: .gitignore  PSP_PZ.docx  PSP_TZ.docx  README.md  alembic.ini  docker-compose.yaml  makefile  nginx.conf  pyproject.toml
backend/: backend.dockerfile  backend.env
backend/app/: app.py
backend/app/admin/: admin.py  views.py
backend/app/auth/: deps.py  security.py  session.py
backend/app/cli/: __main__.py  cli.py
backend/app/crud/: car.py  detail.py  product.py  profile.py
backend/app/db/: db.py  models.py  redis.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 03bd1c84b818_create_user.py  311f430247b0_update_schema.py  32e521bf5a6d_add_product_score_and_created_at_index.py  38467c890e96_create_profile.py  3cc4e55b2435_add_core_tables.py  50b0aa9b2c66_add_score.py  810fae843500_change_profile.py  88fcaf0093f7_add_product_complaints.py  9c0b0cfe13fb_add_profile_fields.py  c8529feabc29_add_car_brand_score.py  e42090c2bffa_remove_unique_index_on_gen_name.py  f99dc638bd85_.py
backend/app/routes/: auth.py  car.py  detail.py  product.py  profile.py  schemas.py
frontend/: frontend.dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/Search/: Search.css  Search.js
frontend/src/components/common/: Auth.css  Auth.js  CarAndDetailSelector.css  CarAndDetailSelector.js
frontend/src/components/pages/Info/: Info.js
frontend/src/components/pages/Search/: GarageHolder.css  GarageHolder.js  ProductModal.css  ProductModal.js  ProfileModal.css  Search.css  (+2 more)
frontend/src/context/: AuthProvider.js
